# phoenix

./: .gitmodules  .travis.yml  CMakeLists.txt  CreateBoilerPlate.bat  README.md  appveyor.yml  project_setup.md
cmake/: CI.CTestScript.cmake  Warnings.cmake
code/: CMakeLists.txt  main.cpp
code/core/: CMakeLists.txt
code/core/private/: CMakeLists.txt
code/core/public/: CMakeLists.txt
code/core/public/Config/: CMakeLists.txt  CompilerWarnings.hpp
code/core/tests/: CMakeLists.txt  successtest.cpp
code/demos/: CMakeLists.txt
code/demos/imgui_glfw_opengl3/: CMakeLists.txt  main.cpp
source/: main.cpp
source/opengl3_example/: imgui_impl_glfw_gl3.cpp
tests/: CMakeLists.txt
